[metadata]
name = hubstore
version = attr: hubstore.version.__version__
url = https://github.com/pyrustic/hubstore
author = Pyrustic Evangelist
author_email = pyrustic@protonmail.com
maintainer = Pyrustic Evangelist
maintainer_email = pyrustic@protonmail.com
description = Download, store, and run Python desktop apps
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    application-store
    software-management
    software-distribution
    desktop-application
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    pyrustic

[options.entry_points]
console_scripts =
    hubstore = hubstore.__main__:main
