[metadata]
name = hubstore
version = file: VERSION
url = https://github.com/pyrustic/hubstore
author = Pyrustic Evangelist
author_email = rusticalex@yahoo.com
maintainer = Pyrustic Evangelist
maintainer_email = rusticalex@yahoo.com
description = To Connect Apps With Users
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    application-store
    software-management
    software-distribution
    desktop-application
    wheel-compatible
    pyrustic
    promotion
    peer-to-peer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    tkf

[options.entry_points]
console_scripts =
    hubstore = hubstore.__main__:main
